--- a/pages/EN/en.html
+++ b/pages/EN/en.html
@@ -7,13 +7,13 @@
 	<meta name="keywords" content="HTML,CSS,XML,JavaScript">
 	<meta name="description" content="APAV">
 	<meta name="author" content="Unilatem">
-	<link rel="shortcut icon" href="assets/images/favicon.ico">
+	<link rel="shortcut icon" href="../../assets/images/favicon.ico">
 	<title>APAV</title>
 	<!--|Meta Config.|-->
 
 	<!--|Import|-->
-	<link rel="stylesheet" href="assets/css/style.css">
-	<script type="module" src="assets/js/script.js"></script>
+	<link rel="stylesheet" href="../../assets/css/style.css">
+	<script rel="text/javascript" src="../../assets/js/script.js"></script>
 	<link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 	<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 	<script>document.addEventListener("DOMContentLoaded", function () { AOS.init(); /*Inicializa o AOS quando o DOM estiver completamente carregado se não estiver funcionando só o aos use o DOM*/ });</script>
@@ -27,87 +27,87 @@
 		<section id="he_sc">
 			<div class="he">
 				<video class="he_vd" autoplay loop>
-					<source src="assets/images/apav.mp4" type="video/mp4" autoplay>
-					Seu navegador não suporta este vídeo.
+					<source src="../../assets/images/apav.mp4" type="video/mp4" autoplay>
+					Your browser does not support this video.
 				</video>
 			</div>
-			<h1 class="he_tt" data-aos="flip-left" data-aos-delay="500" data-aos-easing="ease-in-out">Projeto Social<br><br>e Evangelístico</h1>
+			<h1 class="he_tt" data-aos="flip-left" data-aos-delay="500" data-aos-easing="ease-in-out" data-aos-duration="5000">Social Project<br><br>and Evangelistic</h1>
 		</section>
 		<section id="sc_2">
 			<div class="dv_2">
-				<h2 class="tt_2" data-aos="fade-up" data-aos-easing="ease-in-out">INSPIRADOS PELA FÉ CRISTÃ</h2>
+				<h2 class="tt_2" data-aos="fade-up" data-aos-easing="ease-in-out">INSPIRED BY THE CHRISTIAN FAITH</h2>
 				<span class="separator" data-aos="fade-up" data-aos-easing="ease-in-out"></span>
 				<p class="tx_2" data-aos="fade-up" data-aos-easing="ease-in-out">
-					A Associação Projeto Alcançando Vidas dedica-se a servir ao próximo, levando o amor de Deus às comunidades mais necessitadas.
+					The Projeto Alcançando Vidas Association is dedicated to serving others, bringing God's love to the neediest communities.
 					<br>
 					<br>
-					Em Heliópolis e em outras regiões, trabalhamos incansavelmente para melhorar a qualidade de vida de famílias em situação de vulnerabilidade, oferecendo alimentos, apoio materno e promovendo a inclusão social.
+					In Heliópolis and other regions, we work tirelessly to improve the quality of life of families in vulnerable situations, offering food, maternal support and promoting social inclusion.
 					<br>
 					<br>
-					Nossas caravanas levam esperança a casas de recuperação, aldeias indígenas e comunidades carentes em diversos países. Acreditamos que a fé em ação é capaz de transformar vidas e construir um futuro mais promissor para todos."
+					Our caravans bring hope to recovery homes, indigenous villages and underprivileged communities in several countries. We believe that faith in action can transform lives and build a brighter future for everyone."
 				</p>
 			</div>
 			<div class="sd_dv">
 				<div class="td_dv">
-					<h2 class="td_tt" data-aos="fade-up" data-aos-easing="ease-in-out">MISSÃO</h2>
+					<h2 class="td_tt" data-aos="fade-up" data-aos-easing="ease-in-out">MISSION</h2>
 					<span class="separator" data-aos="fade-up" data-aos-easing="ease-in-out"></span>
 					<p class="td_tx" data-aos="fade-up" data-aos-easing="ease-in-out">
-						Promover o desenvolvimento e bem-estar de famílias em situação de vulnerabilidade social, oferecendo suporte, recursos e capacitação que possibilitem a construção de uma vida digna e autossuficiente.
+						Promote the development and well-being of families in situations of social vulnerability, offering support, resources and training that enable the construction of a dignified and self-sufficient life.
 						<br>
 						<br>
-						Nossa missão é construir uma rede de apoio que fortaleça os vínculos comunitários e contribua para a redução das desigualdades sociais. Buscamos oferecer oportunidades de crescimento e promover a autonomia de todas as famílias que atendemos.
+						Our mission is to build a support network that strengthens community ties and contributes to reducing social inequalities. We seek to provide opportunities for growth and promote autonomy for all the families we serve.
 					</p>
 				</div>
 				<div class="td_dv" data-aos="fade-up" data-aos-easing="ease-in-out">
-					<img class="td_im" src="assets/images/1.webp">
+					<img class="td_im" src="../../assets/images/1.webp">
 				</div>
 			</div>
 			<div class="sd_dv">
 				<div class="td_dv">
-					<h2 class="td_tt" data-aos="fade-up" data-aos-easing="ease-in-out">VISÃO</h2>
+					<h2 class="td_tt" data-aos="fade-up" data-aos-easing="ease-in-out">VISION</h2>
 					<span class="separator" data-aos="fade-up" data-aos-easing="ease-in-out"></span>
 					<p class="td_tx" data-aos="fade-up" data-aos-easing="ease-in-out">
-						Ser uma referência nacional em assistência e apoio a famílias em situação de vulnerabilidade, contribuindo para a construção de uma sociedade mais justa, inclusiva e solidária.
+						To be a national reference in assistance and support for families in vulnerable situations, contributing to the construction of a more just, inclusive and supportive society.
 						<br>
 						<br>
-						Aspiramos um futuro onde todas as famílias tenham acesso a direitos e oportunidades, superando barreiras sociais e alcançando uma melhor qualidade de vida.
+						We aspire to a future where all families have access to rights and opportunities, overcoming social barriers and achieving a better quality of life.
 					</p>
 				</div>
 				<div class="td_dv" data-aos="fade-up" data-aos-easing="ease-in-out">
-					<img class="td_im" src="assets/images/2.webp">
+					<img class="td_im" src="../../assets/images/2.webp">
 				</div>
 			</div>
 			<div class="sd_dv">
 				<div class="td_dv">
-					<h2 class="td_tt" data-aos="fade-up" data-aos-easing="ease-in-out">VALORES</h2>
+					<h2 class="td_tt" data-aos="fade-up" data-aos-easing="ease-in-out">VALUES</h2>
 					<span class="separator" data-aos="fade-up" data-aos-easing="ease-in-out"></span>
 					<p class="td_tx" data-aos="fade-up" data-aos-easing="ease-in-out">
-						Empatia: Colocamo-nos no lugar do outro, buscando compreender e atender às necessidades específicas de cada família com respeito e sensibilidade.
+						Empathy: We put ourselves in the other person's shoes, seeking to understand and meet the specific needs of each family with respect and sensitivity.
 						<br>
 						<br>
-						Transparência: Agimos com clareza e responsabilidade em todas as ações, promovendo confiança e respeito junto às famílias, parceiros e colaboradores.
+						Transparency: We act with clarity and responsibility in all actions, promoting trust and respect among families, partners and employees.
 						<br>
 						<br>
-						Solidariedade: Acreditamos na força da comunidade e no poder da união para superar desafios e construir um ambiente mais inclusivo para todos.
+						Solidarity: We believe in the strength of the community and the power of unity to overcome challenges and build a more inclusive environment for everyone.
 					</p>
 				</div>
 				<div class="td_dv" data-aos="fade-up" data-aos-easing="ease-in-out">
-					<img class="td_im" src="assets/images/3.webp">
+					<img class="td_im" src="../../assets/images/3.webp">
 				</div>
 			</div>
 		</section>
 		<section id="ct_sc">
 			<div class="ct_ft_dv" data-aos="fade-down" data-aos-easing="ease-in-out">
-				<h2 class="ct_tt">Fale Conosco</h2>
+				<h2 class="ct_tt">Contact Us</h2>
 				<p class="ct_ft_tx">R. Viracopos, 139 - Vila Heliópolis,<br>São Paulo - SP, 04236-070</p>
-				<p class="ct_ft_tx">Seg à Dom das 10:00 às 18:00</p>
-				<p class="ct_ft_tx"><a href="tel:+5511914874136" class="ct_sd_tx">Telefone: +55 (11) 9 1487-4136</a></p>
+				<p class="ct_ft_tx">Mon to Sun from 10:00 am to 18:00 pm</p>
+				<p class="ct_ft_tx"><a href="tel:+5511914874136" class="ct_sd_tx">Telphone: +55 (11) 9 1487-4136</a></p>
 				<div class="ct_sd_dv">
 					<a href="https://www.instagram.com/associacaoalcancandovidas/" target="_blank">
-						<img class="ct_sd_dv_ft_im" src="assets/images/botoes/instagram.svg">
+						<img class="ct_sd_dv_ft_im" src="../../assets/images/botoes/instagram.svg">
 					</a>
-					<a href="https://api.whatsapp.com/send?phone=5511914874136&text=Olá,%20vim%20pelo%20site%20de%20vocês%20e%20gostaria%20de%20saber%20mais%20sobre%20o%20projeto!" target="_blank">
-						<img class="ct_sd_dv_ft_im" src="assets/images/botoes/whatsapp.svg">
+					<a href="https://api.whatsapp.com/send?phone=5511914874136&text=Hello,%20I%20came%20across%20your%20website%20and%20would%20like%20to%20know%20more%20about%20the%20project!" target="_blank">
+						<img class=ct_sd_dv_ft_im src="../../assets/images/botoes/whatsapp.svg">
 					</a>
 				</div>
 			</div>
@@ -115,7 +115,7 @@
 		</section>
 	</main>
 	<a href="https://api.whatsapp.com/send?phone=5511914874136&text=Olá,%20vim%20pelo%20site%20de%20vocês%20e%20gostaria%20de%20saber%20mais%20sobre%20o%20projeto!" target="_blank">
-		<img class="whats" src="assets/images/botoes/whats.svg">
+		<img class="whats" src="../../assets/images/botoes/whats.svg">
 	</a>
 	<div class="loading">
 		<div class="loading_wd">
@@ -126,31 +126,31 @@
 			<div class="loading_lt">s</div>
 		</div>
 		<div class="loading_wd">
-			<div class="loading_lt">O </div>
-			<div class="loading_lt"> C</div>
-			<div class="loading_lt">a</div>
-			<div class="loading_lt">m</div>
-			<div class="loading_lt">i</div>
-			<div class="loading_lt">n</div>
+			<div class="loading_lt">T</div>
 			<div class="loading_lt">h</div>
-			<div class="loading_lt">o</div>
+			<div class="loading_lt">e </div>
+			<div class="loading_lt"> W</div>
+			<div class="loading_lt">a</div>
+			<div class="loading_lt">y</div>
 		</div>
 		<div class="loading_wd">
-			<div class="loading_lt">A </div>
-			<div class="loading_lt"> V</div>
-			<div class="loading_lt">e</div>
+			<div class="loading_lt">T</div>
+			<div class="loading_lt">h</div>
+			<div class="loading_lt">e </div>
+			<div class="loading_lt"> T</div>
 			<div class="loading_lt">r</div>
-			<div class="loading_lt">d</div>
-			<div class="loading_lt">a</div>
-			<div class="loading_lt">d</div>
-			<div class="loading_lt">e</div>
+			<div class="loading_lt">u</div>
+			<div class="loading_lt">t</div>
+			<div class="loading_lt">h</div>
 		</div>
 		<div class="loading_wd">
-			<div class="loading_lt">A </div>
-			<div class="loading_lt"> V</div>
+			<div class="loading_lt">T</div>
+			<div class="loading_lt">h</div>
+			<div class="loading_lt">e </div>
+			<div class="loading_lt"> L</div>
 			<div class="loading_lt">i</div>
-			<div class="loading_lt">d</div>
-			<div class="loading_lt">a</div>
+			<div class="loading_lt">f</div>
+			<div class="loading_lt">e</div>
 		</div>
 		<div class="loading_wd"></div>
 		<div class="loading_wd"></div>
