--- a/pages/ES/es.html
+++ b/pages/ES/es.html
@@ -7,13 +7,13 @@
 	<meta name="keywords" content="HTML,CSS,XML,JavaScript">
 	<meta name="description" content="APAV">
 	<meta name="author" content="Unilatem">
-	<link rel="shortcut icon" href="assets/images/favicon.ico">
+	<link rel="shortcut icon" href="../../assets/images/favicon.ico">
 	<title>APAV</title>
 	<!--|Meta Config.|-->
 
 	<!--|Import|-->
-	<link rel="stylesheet" href="assets/css/style.css">
-	<script type="module" src="assets/js/script.js"></script>
+	<link rel="stylesheet" href="../../assets/css/style.css">
+	<script rel="text/javascript" src="../../assets/js/script.js"></script>
 	<link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 	<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 	<script>document.addEventListener("DOMContentLoaded", function () { AOS.init(); /*Inicializa o AOS quando o DOM estiver completamente carregado se não estiver funcionando só o aos use o DOM*/ });</script>
@@ -23,58 +23,59 @@
 
 <body>
 	<header></header>
+
 	<main>
 		<section id="he_sc">
 			<div class="he">
 				<video class="he_vd" autoplay loop>
-					<source src="assets/images/apav.mp4" type="video/mp4" autoplay>
-					Seu navegador não suporta este vídeo.
+					<source src="../../assets/images/apav.mp4" type="video/mp4" autoplay>
+					Su navegador no soporta este vídeo.
 				</video>
 			</div>
-			<h1 class="he_tt" data-aos="flip-left" data-aos-delay="500" data-aos-easing="ease-in-out">Projeto Social<br><br>e Evangelístico</h1>
+			<h1 class="he_tt" data-aos="flip-left" data-aos-delay="500" data-aos-easing="ease-in-out" data-aos-duration="5000">Proyecto Social<br><br>y Evangélico</h1>
 		</section>
 		<section id="sc_2">
 			<div class="dv_2">
-				<h2 class="tt_2" data-aos="fade-up" data-aos-easing="ease-in-out">INSPIRADOS PELA FÉ CRISTÃ</h2>
+				<h2 class="tt_2" data-aos="fade-up" data-aos-easing="ease-in-out">INSPIRADOS EN LA FE CRISTIANA</h2>
 				<span class="separator" data-aos="fade-up" data-aos-easing="ease-in-out"></span>
 				<p class="tx_2" data-aos="fade-up" data-aos-easing="ease-in-out">
-					A Associação Projeto Alcançando Vidas dedica-se a servir ao próximo, levando o amor de Deus às comunidades mais necessitadas.
+					La Associação Projeto Alcançando Vidas se dedica a servir a los demás, llevando el amor de Dios a las comunidades más necesitadas.
 					<br>
 					<br>
-					Em Heliópolis e em outras regiões, trabalhamos incansavelmente para melhorar a qualidade de vida de famílias em situação de vulnerabilidade, oferecendo alimentos, apoio materno e promovendo a inclusão social.
+					En Heliópolis y otras regiones trabajamos incansablemente para mejorar la calidad de vida de las familias en situación de vulnerabilidad, ofreciendo alimentación, apoyo materno y promoviendo la inclusión social.
 					<br>
 					<br>
-					Nossas caravanas levam esperança a casas de recuperação, aldeias indígenas e comunidades carentes em diversos países. Acreditamos que a fé em ação é capaz de transformar vidas e construir um futuro mais promissor para todos."
+					Nuestras caravanas llevan esperanza a casas de recuperación, pueblos indígenas y comunidades necesitadas en diferentes países. Creemos que la fe en acción es capaz de transformar vidas y construir un futuro más prometedor para todos".
 				</p>
 			</div>
 			<div class="sd_dv">
 				<div class="td_dv">
-					<h2 class="td_tt" data-aos="fade-up" data-aos-easing="ease-in-out">MISSÃO</h2>
+					<h2 class="td_tt" data-aos="fade-up" data-aos-easing="ease-in-out">MISIÓN</h2>
 					<span class="separator" data-aos="fade-up" data-aos-easing="ease-in-out"></span>
 					<p class="td_tx" data-aos="fade-up" data-aos-easing="ease-in-out">
-						Promover o desenvolvimento e bem-estar de famílias em situação de vulnerabilidade social, oferecendo suporte, recursos e capacitação que possibilitem a construção de uma vida digna e autossuficiente.
+						Promover el desarrollo y bienestar de las familias en situación de vulnerabilidad social, ofreciendo apoyo, recursos y formación que les permitan construir una vida digna y autosuficiente.
 						<br>
 						<br>
-						Nossa missão é construir uma rede de apoio que fortaleça os vínculos comunitários e contribua para a redução das desigualdades sociais. Buscamos oferecer oportunidades de crescimento e promover a autonomia de todas as famílias que atendemos.
+						Nuestra misión es construir una red de apoyo que fortalezca los vínculos comunitarios y contribuya a reducir las desigualdades sociales. Buscamos ofrecer oportunidades de crecimiento y promover la autonomía de todas las familias que atendemos.
 					</p>
 				</div>
 				<div class="td_dv" data-aos="fade-up" data-aos-easing="ease-in-out">
-					<img class="td_im" src="assets/images/1.webp">
+					<img class="td_im" src="../../assets/images/1.webp">
 				</div>
 			</div>
 			<div class="sd_dv">
 				<div class="td_dv">
-					<h2 class="td_tt" data-aos="fade-up" data-aos-easing="ease-in-out">VISÃO</h2>
+					<h2 class="td_tt" data-aos="fade-up" data-aos-easing="ease-in-out">VISIÓN</h2>
 					<span class="separator" data-aos="fade-up" data-aos-easing="ease-in-out"></span>
 					<p class="td_tx" data-aos="fade-up" data-aos-easing="ease-in-out">
-						Ser uma referência nacional em assistência e apoio a famílias em situação de vulnerabilidade, contribuindo para a construção de uma sociedade mais justa, inclusiva e solidária.
+						Ser un referente nacional en atención y apoyo a familias en situación de vulnerabilidad, contribuyendo a la construcción de una sociedad más justa, inclusiva y solidaria.
 						<br>
 						<br>
-						Aspiramos um futuro onde todas as famílias tenham acesso a direitos e oportunidades, superando barreiras sociais e alcançando uma melhor qualidade de vida.
+						Aspiramos a un futuro donde todas las familias tengan acceso a derechos y oportunidades, superando barreras sociales y logrando una mejor calidad de vida.
 					</p>
 				</div>
 				<div class="td_dv" data-aos="fade-up" data-aos-easing="ease-in-out">
-					<img class="td_im" src="assets/images/2.webp">
+					<img class="td_im" src="../../assets/images/2.webp">
 				</div>
 			</div>
 			<div class="sd_dv">
@@ -82,32 +83,32 @@
 					<h2 class="td_tt" data-aos="fade-up" data-aos-easing="ease-in-out">VALORES</h2>
 					<span class="separator" data-aos="fade-up" data-aos-easing="ease-in-out"></span>
 					<p class="td_tx" data-aos="fade-up" data-aos-easing="ease-in-out">
-						Empatia: Colocamo-nos no lugar do outro, buscando compreender e atender às necessidades específicas de cada família com respeito e sensibilidade.
+						Empatía: Nos ponemos en el lugar de los demás, buscando comprender y atender las necesidades específicas de cada familia con respeto y sensibilidad.
 						<br>
 						<br>
-						Transparência: Agimos com clareza e responsabilidade em todas as ações, promovendo confiança e respeito junto às famílias, parceiros e colaboradores.
+						Transparencia: Actuamos con claridad y responsabilidad en todas las acciones, promoviendo la confianza y el respeto entre familias, socios y empleados.
 						<br>
 						<br>
-						Solidariedade: Acreditamos na força da comunidade e no poder da união para superar desafios e construir um ambiente mais inclusivo para todos.
+						Solidaridad: Creemos en la fuerza de la comunidad y el poder de la unidad para superar los desafíos y construir un entorno más inclusivo para todos.
 					</p>
 				</div>
 				<div class="td_dv" data-aos="fade-up" data-aos-easing="ease-in-out">
-					<img class="td_im" src="assets/images/3.webp">
+					<img class="td_im" src="../../assets/images/3.webp">
 				</div>
 			</div>
 		</section>
 		<section id="ct_sc">
 			<div class="ct_ft_dv" data-aos="fade-down" data-aos-easing="ease-in-out">
-				<h2 class="ct_tt">Fale Conosco</h2>
+				<h2 class="ct_tt">Contáctenos</h2>
 				<p class="ct_ft_tx">R. Viracopos, 139 - Vila Heliópolis,<br>São Paulo - SP, 04236-070</p>
-				<p class="ct_ft_tx">Seg à Dom das 10:00 às 18:00</p>
-				<p class="ct_ft_tx"><a href="tel:+5511914874136" class="ct_sd_tx">Telefone: +55 (11) 9 1487-4136</a></p>
+				<p class="ct_ft_tx">Lun a Dom de 10:00 am a 18:00 pm</p>
+				<p class="ct_ft_tx"><a href="tel:+5511914874136" class="ct_sd_tx">Teléfono: +55 (11) 9 1487-4136</a></p>
 				<div class="ct_sd_dv">
 					<a href="https://www.instagram.com/associacaoalcancandovidas/" target="_blank">
-						<img class="ct_sd_dv_ft_im" src="assets/images/botoes/instagram.svg">
+						<img class="ct_sd_dv_ft_im" src="../../assets/images/botoes/instagram.svg">
 					</a>
-					<a href="https://api.whatsapp.com/send?phone=5511914874136&text=Olá,%20vim%20pelo%20site%20de%20vocês%20e%20gostaria%20de%20saber%20mais%20sobre%20o%20projeto!" target="_blank">
-						<img class="ct_sd_dv_ft_im" src="assets/images/botoes/whatsapp.svg">
+					<a href="https://api.whatsapp.com/send?phone=5511914874136&text=Hola,%20encontré%20su%20sitio%20web%20y%20me%20gustaría%20saber%20más%20sobre%20el%20proyecto!" target="_blank">
+						<img class=ct_sd_dv_ft_im src="../../assets/images/botoes/whatsapp.svg">
 					</a>
 				</div>
 			</div>
@@ -115,7 +116,7 @@
 		</section>
 	</main>
 	<a href="https://api.whatsapp.com/send?phone=5511914874136&text=Olá,%20vim%20pelo%20site%20de%20vocês%20e%20gostaria%20de%20saber%20mais%20sobre%20o%20projeto!" target="_blank">
-		<img class="whats" src="assets/images/botoes/whats.svg">
+		<img class="whats" src="../../assets/images/botoes/whats.svg">
 	</a>
 	<div class="loading">
 		<div class="loading_wd">
@@ -126,27 +127,28 @@
 			<div class="loading_lt">s</div>
 		</div>
 		<div class="loading_wd">
-			<div class="loading_lt">O </div>
+			<div class="loading_lt">E</div>
+			<div class="loading_lt">l </div>
 			<div class="loading_lt"> C</div>
 			<div class="loading_lt">a</div>
 			<div class="loading_lt">m</div>
 			<div class="loading_lt">i</div>
 			<div class="loading_lt">n</div>
-			<div class="loading_lt">h</div>
 			<div class="loading_lt">o</div>
 		</div>
 		<div class="loading_wd">
-			<div class="loading_lt">A </div>
+			<div class="loading_lt">L</div>
+			<div class="loading_lt">a </div>
 			<div class="loading_lt"> V</div>
 			<div class="loading_lt">e</div>
 			<div class="loading_lt">r</div>
 			<div class="loading_lt">d</div>
 			<div class="loading_lt">a</div>
 			<div class="loading_lt">d</div>
-			<div class="loading_lt">e</div>
 		</div>
 		<div class="loading_wd">
-			<div class="loading_lt">A </div>
+			<div class="loading_lt">L</div>
+			<div class="loading_lt">a </div>
 			<div class="loading_lt"> V</div>
 			<div class="loading_lt">i</div>
 			<div class="loading_lt">d</div>
