--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<meta name="keywords" content="HTML,CSS,XML,JavaScript">
 	<meta name="description" content="APAV">
 	<meta name="author" content="Unilatem">
-	<link rel="shortcut icon" href="assets/images/favicon.ico">
+	<link rel="shortcut icon" href="assets/images/logo/favicon.ico">
 	<title>APAV</title>
 	<!--|Meta Config.|-->
 
@@ -16,6 +16,8 @@
 	<script type="module" src="assets/js/script.js"></script>
 	<link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 	<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+	<script src="https://plugin.handtalk.me/web/latest/handtalk.min.js"></script>
+	<script>var ht = new HT({ token: "TOKEN" });</script>
 	<script>document.addEventListener("DOMContentLoaded", function () { AOS.init(); /*Inicializa o AOS quando o DOM estiver completamente carregado se não estiver funcionando só o aos use o DOM*/ });</script>
 	<script>fetch("components/header.html").then((e => e.text())).then((e => { document.querySelector("header").innerHTML = e })), fetch("components/footer.html").then((e => e.text())).then((e => { document.querySelector("footer").innerHTML = e })); const trySetYear = () => { const spanAno = document.getElementById('ano-atual'); if (spanAno) { spanAno.textContent = new Date().getFullYear(); } else { setTimeout(trySetYear, 50); } }; trySetYear();</script>
 	<!--|Import|-->
