--- a/pages/ES/politica.html
+++ b/pages/ES/politica.html
@@ -7,7 +7,7 @@
 	<meta name="keywords" content="HTML,CSS,XML,JavaScript">
 	<meta name="description" content="APAV">
 	<meta name="author" content="Unilatem">
-	<link rel="shortcut icon" href="../../assets/images/favicon.ico">
+	<link rel="shortcut icon" href="../../assets/images/logo/favicon.ico">
 	<title>APAV | Política de Privacidad</title>
 	<!--|Meta Config.|-->
 
