--- a/pages/EN/about.html
+++ b/pages/EN/about.html
@@ -82,23 +82,23 @@
 				</div>
 				<div class="sb_ff_dv">
 					<div class="sb_sx_dv">
-						<img class="sb_sx_im" data-aos="fade-up" data-aos-easing="ease-in-out" src="../../assets/images/brazil.svg">
+						<img class="sb_sx_im" data-aos="fade-up" data-aos-easing="ease-in-out" src="../../assets/images/brazil.svg" alt="Brazil Flag">
 						<h3 class="sb_sx_tt" data-aos="fade-up" data-aos-easing="ease-in-out">Brazil</h3>
 					</div>
 					<div class="sb_sx_dv">
-						<img class="sb_sx_im" data-aos="fade-up" data-aos-easing="ease-in-out" src="../../assets/images/bolivia.svg">
+						<img class="sb_sx_im" data-aos="fade-up" data-aos-easing="ease-in-out" src="../../assets/images/bolivia.svg" alt="Bolivia Flag">
 						<h3 class="sb_sx_tt" data-aos="fade-up" data-aos-easing="ease-in-out">Bolivia</h3>
 					</div>
 					<div class="sb_sx_dv">
-						<img class="sb_sx_im" data-aos="fade-up" data-aos-easing="ease-in-out" src="../../assets/images/paraguai.svg">
+						<img class="sb_sx_im" data-aos="fade-up" data-aos-easing="ease-in-out" src="../../assets/images/paraguai.svg" alt="Paraguay Flag">
 						<h3 class="sb_sx_tt" data-aos="fade-up" data-aos-easing="ease-in-out">Paraguay</h3>
 					</div>
 					<div class="sb_sx_dv">
-						<img class="sb_sx_im" data-aos="fade-up" data-aos-easing="ease-in-out" src="../../assets/images/chile.svg">
+						<img class="sb_sx_im" data-aos="fade-up" data-aos-easing="ease-in-out" src="../../assets/images/chile.svg" alt="Chile Flag">
 						<h3 class="sb_sx_tt" data-aos="fade-up" data-aos-easing="ease-in-out">Chile</h3>
 					</div>
 					<div class="sb_sv_dv">
-						<img class="sb_sx_im" data-aos="fade-up" data-aos-easing="ease-in-out" src="../../assets/images/africa.svg">
+						<img class="sb_sx_im" data-aos="fade-up" data-aos-easing="ease-in-out" src="../../assets/images/africa.svg" alt="African Continent Flag">
 						<h3 class="sb_sx_tt" data-aos="fade-up" data-aos-easing="ease-in-out">African Continent</h3>
 					</div>
 				</div>
@@ -109,19 +109,19 @@
 					<p class="sb_fo_tx" data-aos="fade-up" data-aos-easing="ease-in-out">With an approach centered on the love and sacrifice of Jesus, who gave his life to save humanity, the Association seeks to reach those who are often forgotten by society. The goal is not only to offer spiritual comfort, but also to restore dignity and promote transformation through welfare support.</p>
 				</div>
 				<div class="sb_ei_dv">
-					<img class="sb_sx_im" data-aos="fade-up" data-aos-easing="ease-in-out" src="../../assets/images/christ.svg">
-					<img class="sb_sx_im" data-aos="fade-up" data-aos-easing="ease-in-out" src="../../assets/images/equal.svg">
-					<img class="sb_sx_im" data-aos="fade-up" data-aos-easing="ease-in-out" src="../../assets/images/heartchrist.svg">
+					<img class="sb_sx_im" data-aos="fade-up" data-aos-easing="ease-in-out" src="../../assets/images/christ.svg" alt="Christ Cross">
+					<img class="sb_sx_im" data-aos="fade-up" data-aos-easing="ease-in-out" src="../../assets/images/equal.svg" alt="Equal Sign">
+					<img class="sb_sx_im" data-aos="fade-up" data-aos-easing="ease-in-out" src="../../assets/images/heartchrist.svg" alt="Christ Heart">
 				</div>
 				<div class="sb_fo_dv">
 					<p class="sb_fo_tx" data-aos="fade-up" data-aos-easing="ease-in-out">Join us in this mission of transformation! Together, we can impact the lives of thousands of people, bringing hope, renewal and the love of Christ to those who need it most. Be part of this change!</p>
 				</div>
-				<a class="sb_bt" href="https://api.whatsapp.com/send?phone=5511914874136&text=Hello,%20I%20came%20across%20your%20website%20and%20I%20want%20to%20be%20a%20volunteer%20for%20the%20project,%20how%20can%20I%20apply?" target="_blank">I WANT TO BE A VOLUNTEER<br><img class="sb_bt_im" src="../../assets/images/heart.svg"></a>
+				<a class="sb_bt" href="https://api.whatsapp.com/send?phone=5511914874136&text=Hello,%20I%20came%20across%20your%20website%20and%20I%20want%20to%20be%20a%20volunteer%20for%20the%20project,%20how%20can%20I%20apply?" target="_blank">I WANT TO BE A VOLUNTEER<br><img class="sb_bt_im" src="../../assets/images/heart.svg" alt="Hands Heart"></a>
 			</div>
 		</section>
 	</main>
 	<a href="https://api.whatsapp.com/send?phone=5511914874136&text=Olá,%20vim%20pelo%20site%20de%20vocês%20e%20gostaria%20de%20saber%20mais%20sobre%20o%20projeto!" target="_blank">
-		<img class="whats" src="../../assets/images/botoes/whats.svg">
+		<img class="whats" src="../../assets/images/botoes/whats.svg" alt="WhatsApp Logo">
 	</a>
 	<div class="loading">
 		<div class="loading_wd">
