--- a/pages/EN/donate.html
+++ b/pages/EN/donate.html
@@ -29,14 +29,14 @@
 			<h3 class="da_tt" data-aos="fade-up" data-aos-easing="ease-in-out">PIX</h3>
 			<div class="da_ft_dv">
 				<div class="da_sd_dv" data-aos="fade-down" data-aos-easing="ease-in-out">
-					<img class="da_ft_im" src="../../assets/images/doar1.webp">
-					<img class="da_ft_im" src="../../assets/images/doar2.webp">
-					<img class="da_ft_im" src="../../assets/images/doar3.webp">
-					<img class="da_ft_im" src="../../assets/images/doar4.webp">
+					<img class="da_ft_im" src="../../assets/images/doar1.webp" alt="Indigenous child eating pasta">
+					<img class="da_ft_im" src="../../assets/images/doar2.webp" alt="Country women holding a toiletry bag with basic hygiene products">
+					<img class="da_ft_im" src="../../assets/images/doar3.webp" alt="Child holding a package of sweets">
+					<img class="da_ft_im" src="../../assets/images/doar4.webp" alt="Country Woman holding a package of sweets">
 				</div>
 				<div class="da_td_dv">
 					<div class="da_fo_dv">
-						<img class="da_sd_im" data-aos="fade-up" data-aos-easing="ease-in-out" src="../../assets/images/qrcode.jpeg">
+						<img class="da_sd_im" data-aos="fade-up" data-aos-easing="ease-in-out" src="../../assets/images/qrcode.jpeg" alt="QR Code do PIX">
 					</div>
 					<!--
               <div>
@@ -46,16 +46,16 @@
               -->
 				</div>
 				<div class="da_ff_dv" data-aos="fade-down" data-aos-easing="ease-in-out">
-					<img class="da_ft_im" src="../../assets/images/doar5.webp">
-					<img class="da_ft_im" src="../../assets/images/doar6.webp">
-					<img class="da_ft_im" src="../../assets/images/doar7.webp">
-					<img class="da_ft_im" src="../../assets/images/doar8.webp">
+					<img class="da_ft_im" src="../../assets/images/doar5.webp" alt="Women holding package of basic hygiene products">
+					<img class="da_ft_im" src="../../assets/images/doar6.webp" alt="A car with several basic food basket packages">
+					<img class="da_ft_im" src="../../assets/images/doar7.webp" alt="Volunteer carrying basic food basket">
+					<img class="da_ft_im" src="../../assets/images/doar8.webp" alt="Children and parents watching a lecture">
 				</div>
 			</div>
 		</section>
 	</main>
 	<a href="https://api.whatsapp.com/send?phone=5511914874136&text=Olá,%20vim%20pelo%20site%20de%20vocês%20e%20gostaria%20de%20saber%20mais%20sobre%20o%20projeto!" target="_blank">
-		<img class="whats" src="../../assets/images/botoes/whats.svg">
+		<img class="whats" src="../../assets/images/botoes/whats.svg" alt="Logo WhatsApp">
 	</a>
 	<div class="loading">
 		<div class="loading_wd">
