--- a/pages/EN/politica.html
+++ b/pages/EN/politica.html
@@ -25,7 +25,7 @@
 	<header></header>
 	<main>
 		<section id="secpl">
-			<h1 class="ttpl">Privacy Policy<img class="impl" src="../../assets/images/botoes/politica.svg" alt="escudo"></h1>
+			<h1 class="ttpl">Privacy Policy<img class="impl" src="../../assets/images/botoes/politica.svg" alt="shield"></h1>
 			<div class="dvpl">
 				<p class="txpl">
 					Your privacy is important to us.
@@ -48,7 +48,7 @@
 		</section>
 	</main>
 	<a href="https://api.whatsapp.com/send?phone=5511914874136&text=Olá,%20vim%20pelo%20site%20de%20vocês%20e%20gostaria%20de%20saber%20mais%20sobre%20o%20projeto!" target="_blank">
-		<img class="whats" src="../../assets/images/botoes/whats.svg">
+		<img class="whats" src="../../assets/images/botoes/whats.svg" alt="Logo WhatsApp">
 	</a>
 	<div class="loading">
 		<div class="loading_wd">
