--- a/pages/ES/donacion.html
+++ b/pages/ES/donacion.html
@@ -29,10 +29,10 @@
 			<h3 class="da_tt" data-aos="fade-up" data-aos-easing="ease-in-out">PIX</h3>
 			<div class="da_ft_dv">
 				<div class="da_sd_dv" data-aos="fade-down" data-aos-easing="ease-in-out">
-					<img class="da_ft_im" src="../../assets/images/doar1.webp">
-					<img class="da_ft_im" src="../../assets/images/doar2.webp">
-					<img class="da_ft_im" src="../../assets/images/doar3.webp">
-					<img class="da_ft_im" src="../../assets/images/doar4.webp">
+					<img class="da_ft_im" src="../../assets/images/doar1.webp" alt="Niño indígena comiendo pasta">
+					<img class="da_ft_im" src="../../assets/images/doar2.webp" alt="Mujeres de campo sosteniendo una bolsa de aseo con productos de higiene básicos">
+					<img class="da_ft_im" src="../../assets/images/doar3.webp" alt="Niño sosteniendo un paquete de dulces">
+					<img class="da_ft_im" src="../../assets/images/doar4.webp" alt="Mujer de campo sosteniendo un paquete de dulces">
 				</div>
 				<div class="da_td_dv">
 					<div class="da_fo_dv">
@@ -46,16 +46,16 @@
               -->
 				</div>
 				<div class="da_ff_dv" data-aos="fade-down" data-aos-easing="ease-in-out">
-					<img class="da_ft_im" src="../../assets/images/doar5.webp">
-					<img class="da_ft_im" src="../../assets/images/doar6.webp">
-					<img class="da_ft_im" src="../../assets/images/doar7.webp">
-					<img class="da_ft_im" src="../../assets/images/doar8.webp">
+					<img class="da_ft_im" src="../../assets/images/doar5.webp" alt="Mujeres sosteniendo un paquete de productos de higiene básicos.">
+					<img class="da_ft_im" src="../../assets/images/doar6.webp" alt="Un coche con varios paquetes de alimentos básicos">
+					<img class="da_ft_im" src="../../assets/images/doar7.webp" alt="Voluntario llevando cesta básica">
+					<img class="da_ft_im" src="../../assets/images/doar8.webp" alt="Niños y padres asistiendo a una conferencia">
 				</div>
 			</div>
 		</section>
 	</main>
 	<a href="https://api.whatsapp.com/send?phone=5511914874136&text=Olá,%20vim%20pelo%20site%20de%20vocês%20e%20gostaria%20de%20saber%20mais%20sobre%20o%20projeto!" target="_blank">
-		<img class="whats" src="../../assets/images/botoes/whats.svg">
+		<img class="whats" src="../../assets/images/botoes/whats.svg" alt="Logo de WhatsApp">
 	</a>
 	<div class="loading">
 		<div class="loading_wd">
