--- a/pages/ES/es.html
+++ b/pages/ES/es.html
@@ -60,7 +60,7 @@
 					</p>
 				</div>
 				<div class="td_dv" data-aos="fade-up" data-aos-easing="ease-in-out">
-					<img class="td_im" src="../../assets/images/1.webp">
+					<img class="td_im" src="../../assets/images/1.webp" alt="Voluntario llevando canasta básica de alimentos">
 				</div>
 			</div>
 			<div class="sd_dv">
@@ -75,7 +75,7 @@
 					</p>
 				</div>
 				<div class="td_dv" data-aos="fade-up" data-aos-easing="ease-in-out">
-					<img class="td_im" src="../../assets/images/2.webp">
+					<img class="td_im" src="../../assets/images/2.webp" alt="Voluntarios tomando fotos.">
 				</div>
 			</div>
 			<div class="sd_dv">
@@ -93,7 +93,7 @@
 					</p>
 				</div>
 				<div class="td_dv" data-aos="fade-up" data-aos-easing="ease-in-out">
-					<img class="td_im" src="../../assets/images/3.webp">
+					<img class="td_im" src="../../assets/images/3.webp" alt="Voluntarios rezando en una casa">
 				</div>
 			</div>
 		</section>
@@ -105,10 +105,10 @@
 				<p class="ct_ft_tx"><a href="tel:+5511914874136" class="ct_sd_tx">Teléfono: +55 (11) 9 1487-4136</a></p>
 				<div class="ct_sd_dv">
 					<a href="https://www.instagram.com/associacaoalcancandovidas/" target="_blank">
-						<img class="ct_sd_dv_ft_im" src="../../assets/images/botoes/instagram.svg">
+						<img class="ct_sd_dv_ft_im" src="../../assets/images/botoes/instagram.svg" alt="Logo de Instagram">
 					</a>
 					<a href="https://api.whatsapp.com/send?phone=5511914874136&text=Hola,%20encontré%20su%20sitio%20web%20y%20me%20gustaría%20saber%20más%20sobre%20el%20proyecto!" target="_blank">
-						<img class=ct_sd_dv_ft_im src="../../assets/images/botoes/whatsapp.svg">
+						<img class=ct_sd_dv_ft_im src="../../assets/images/botoes/whatsapp.svg" alt="Logo de WhatsApp">
 					</a>
 				</div>
 			</div>
@@ -116,7 +116,7 @@
 		</section>
 	</main>
 	<a href="https://api.whatsapp.com/send?phone=5511914874136&text=Olá,%20vim%20pelo%20site%20de%20vocês%20e%20gostaria%20de%20saber%20mais%20sobre%20o%20projeto!" target="_blank">
-		<img class="whats" src="../../assets/images/botoes/whats.svg">
+		<img class="whats" src="../../assets/images/botoes/whats.svg" alt="Logo de WhatsApp">
 	</a>
 	<div class="loading">
 		<div class="loading_wd">
