--- a/pages/ES/sobre.html
+++ b/pages/ES/sobre.html
@@ -27,7 +27,7 @@
 		<section>
 			<div class="sb_ft_dv">
 				<div class="sb_he_dv">
-					<img class="sb_he" src="../../assets/images/bg3.webp">
+					<img class="sb_he" src="../../assets/images/bg3.webp" alt="Voluntarios posando para una foto">
 				</div>
 				<h2 class="sb_he_tt" data-aos="flip-left" data-aos-delay="700" data-aos-easing="ease-in-out" data-aos-duration="5000">Sobre Nosotros</h2>
 			</div>
@@ -82,23 +82,23 @@
 				</div>
 				<div class="sb_ff_dv">
 					<div class="sb_sx_dv">
-						<img class="sb_sx_im" data-aos="fade-up" data-aos-easing="ease-in-out" src="../../assets/images/brazil.svg">
+						<img class="sb_sx_im" data-aos="fade-up" data-aos-easing="ease-in-out" src="../../assets/images/brazil.svg" alt="Bandera de Brasil">
 						<h3 class="sb_sx_tt" data-aos="fade-up" data-aos-easing="ease-in-out">Brasil</h3>
 					</div>
 					<div class="sb_sx_dv">
-						<img class="sb_sx_im" data-aos="fade-up" data-aos-easing="ease-in-out" src="../../assets/images/bolivia.svg">
+						<img class="sb_sx_im" data-aos="fade-up" data-aos-easing="ease-in-out" src="../../assets/images/bolivia.svg" alt="Bandera de Bolivia">
 						<h3 class="sb_sx_tt" data-aos="fade-up" data-aos-easing="ease-in-out">Bolívia</h3>
 					</div>
 					<div class="sb_sx_dv">
-						<img class="sb_sx_im" data-aos="fade-up" data-aos-easing="ease-in-out" src="../../assets/images/paraguai.svg">
+						<img class="sb_sx_im" data-aos="fade-up" data-aos-easing="ease-in-out" src="../../assets/images/paraguai.svg" alt="Bandera de Paraguay">
 						<h3 class="sb_sx_tt" data-aos="fade-up" data-aos-easing="ease-in-out">Paraguay</h3>
 					</div>
 					<div class="sb_sx_dv">
-						<img class="sb_sx_im" data-aos="fade-up" data-aos-easing="ease-in-out" src="../../assets/images/chile.svg">
+						<img class="sb_sx_im" data-aos="fade-up" data-aos-easing="ease-in-out" src="../../assets/images/chile.svg" alt="Bandera de Chile">
 						<h3 class="sb_sx_tt" data-aos="fade-up" data-aos-easing="ease-in-out">Chile</h3>
 					</div>
 					<div class="sb_sv_dv">
-						<img class="sb_sx_im" data-aos="fade-up" data-aos-easing="ease-in-out" src="../../assets/images/africa.svg">
+						<img class="sb_sx_im" data-aos="fade-up" data-aos-easing="ease-in-out" src="../../assets/images/africa.svg" alt="Bandera del Continente Africano">
 						<h3 class="sb_sx_tt" data-aos="fade-up" data-aos-easing="ease-in-out">Continente Africano</h3>
 					</div>
 				</div>
@@ -109,19 +109,19 @@
 					<p class="sb_fo_tx" data-aos="fade-up" data-aos-easing="ease-in-out">Con un enfoque centrado en el amor y sacrificio de Jesús, quien dio su vida para salvar a la humanidad, la Asociación busca llegar a aquellos que muchas veces son olvidados por la sociedad. El objetivo no es sólo ofrecer consuelo espiritual, sino también restaurar la dignidad y promover la transformación a través del apoyo asistencial.</p>
 				</div>
 				<div class="sb_ei_dv">
-					<img class="sb_sx_im" data-aos="fade-up" data-aos-easing="ease-in-out" src="../../assets/images/christ.svg">
-					<img class="sb_sx_im" data-aos="fade-up" data-aos-easing="ease-in-out" src="../../assets/images/equal.svg">
-					<img class="sb_sx_im" data-aos="fade-up" data-aos-easing="ease-in-out" src="../../assets/images/heartchrist.svg">
+					<img class="sb_sx_im" data-aos="fade-up" data-aos-easing="ease-in-out" src="../../assets/images/christ.svg" alt="Cruz de Cristo">
+					<img class="sb_sx_im" data-aos="fade-up" data-aos-easing="ease-in-out" src="../../assets/images/equal.svg" alt="Símbolo de igualdad">
+					<img class="sb_sx_im" data-aos="fade-up" data-aos-easing="ease-in-out" src="../../assets/images/heartchrist.svg" alt="Corazón de Cristo">
 				</div>
 				<div class="sb_fo_dv">
 					<p class="sb_fo_tx" data-aos="fade-up" data-aos-easing="ease-in-out">¡Únase a nosotros en esta misión de transformación! Unidos, podemos impactar la vida de miles de personas, llevando esperanza, renovación y el amor de Cristo a quienes más lo necesitan. ¡Sé parte de este cambio!</p>
 				</div>
-				<a class="sb_bt" href="https://api.whatsapp.com/send?phone=5511914874136&text=Hola,%20llegué%20a%20través%20de%20su%20sitio%20web%20y%20quiero%20ser%20voluntario%20en%20el%20proyecto,%20¿cómo%20puedo%20postularme?" target="_blank">QUIERO SER VOLUNTARIO<br><img class="sb_bt_im" src="../../assets/images/heart.svg"></a>
+				<a class="sb_bt" href="https://api.whatsapp.com/send?phone=5511914874136&text=Hola,%20llegué%20a%20través%20de%20su%20sitio%20web%20y%20quiero%20ser%20voluntario%20en%20el%20proyecto,%20¿cómo%20puedo%20postularme?" target="_blank">QUIERO SER VOLUNTARIO<br><img class="sb_bt_im" src="../../assets/images/heart.svg" alt="Corazón con manos"></a>
 			</div>
 		</section>
 	</main>
 	<a href="https://api.whatsapp.com/send?phone=5511914874136&text=Olá,%20vim%20pelo%20site%20de%20vocês%20e%20gostaria%20de%20saber%20mais%20sobre%20o%20projeto!" target="_blank">
-		<img class="whats" src="../../assets/images/botoes/whats.svg">
+		<img class="whats" src="../../assets/images/botoes/whats.svg" alt="Logo do WhatsApp">
 	</a>
 	<div class="loading">
 		<div class="loading_wd">
