--- a/pages/termos.html
+++ b/pages/termos.html
@@ -25,7 +25,7 @@
 	<header></header>
 	<main>
 		<section id="sectm">
-			<h1 class="tttm">Termos de Uso<img class="imtm" src="../assets/images/botoes/termo.svg"></h1>
+			<h1 class="tttm">Termos de Uso<img class="imtm" src="../assets/images/botoes/termo.svg" alt="Icone de Termos"></h1>
 			<div class="dvtm">
 				<p class="txtm">
 					Bem-vindo a APAV! Ao acessar e utilizar nosso site, você concorda em cumprir com os seguintes termos e condições:
@@ -48,7 +48,7 @@
 		</section>
 	</main>
 	<a href="https://api.whatsapp.com/send?phone=5511914874136&text=Olá,%20vim%20pelo%20site%20de%20vocês%20e%20gostaria%20de%20saber%20mais%20sobre%20o%20projeto!" target="_blank">
-		<img class="whats" src="../assets/images/botoes/whats.svg">
+		<img class="whats" src="../assets/images/botoes/whats.svg" alt="Logo do WhatsApp">
 	</a>
 	<div class="loading">
 		<div class="loading_wd">
