--- a/pages/EN/en.html
+++ b/pages/EN/en.html
@@ -59,7 +59,7 @@
 					</p>
 				</div>
 				<div class="td_dv" data-aos="fade-up" data-aos-easing="ease-in-out">
-					<img class="td_im" src="../../assets/images/1.webp">
+					<img class="td_im" src="../../assets/images/1.webp" alt="Volunteer carrying basic food basket">
 				</div>
 			</div>
 			<div class="sd_dv">
@@ -74,10 +74,10 @@
 					</p>
 				</div>
 				<div class="td_dv" data-aos="fade-up" data-aos-easing="ease-in-out">
-					<img class="td_im" src="../../assets/images/2.webp">
+					<img class="td_im" src="../../assets/images/2.webp" alt="Volunteers taking photo">
 				</div>
 			</div>
-			<div class="sd_dv">
+			<div class=" sd_dv">
 				<div class="td_dv">
 					<h2 class="td_tt" data-aos="fade-up" data-aos-easing="ease-in-out">VALUES</h2>
 					<span class="separator" data-aos="fade-up" data-aos-easing="ease-in-out"></span>
@@ -92,7 +92,7 @@
 					</p>
 				</div>
 				<div class="td_dv" data-aos="fade-up" data-aos-easing="ease-in-out">
-					<img class="td_im" src="../../assets/images/3.webp">
+					<img class="td_im" src="../../assets/images/3.webp" alt="Volunteers praying in a house">
 				</div>
 			</div>
 		</section>
@@ -104,10 +104,10 @@
 				<p class="ct_ft_tx"><a href="tel:+5511914874136" class="ct_sd_tx">Telphone: +55 (11) 9 1487-4136</a></p>
 				<div class="ct_sd_dv">
 					<a href="https://www.instagram.com/associacaoalcancandovidas/" target="_blank">
-						<img class="ct_sd_dv_ft_im" src="../../assets/images/botoes/instagram.svg">
+						<img class="ct_sd_dv_ft_im" src="../../assets/images/botoes/instagram.svg" alt="Instagram Logo">
 					</a>
 					<a href="https://api.whatsapp.com/send?phone=5511914874136&text=Hello,%20I%20came%20across%20your%20website%20and%20would%20like%20to%20know%20more%20about%20the%20project!" target="_blank">
-						<img class=ct_sd_dv_ft_im src="../../assets/images/botoes/whatsapp.svg">
+						<img class=ct_sd_dv_ft_im src="../../assets/images/botoes/whatsapp.svg" alt="WhatsApp Logo">
 					</a>
 				</div>
 			</div>
@@ -115,7 +115,7 @@
 		</section>
 	</main>
 	<a href="https://api.whatsapp.com/send?phone=5511914874136&text=Olá,%20vim%20pelo%20site%20de%20vocês%20e%20gostaria%20de%20saber%20mais%20sobre%20o%20projeto!" target="_blank">
-		<img class="whats" src="../../assets/images/botoes/whats.svg">
+		<img class="whats" src="../../assets/images/botoes/whats.svg" alt="WhatsApp Logo">
 	</a>
 	<div class="loading">
 		<div class="loading_wd">
