--- a/pages/EN/termos.html
+++ b/pages/EN/termos.html
@@ -25,7 +25,7 @@
 	<header></header>
 	<main>
 		<section id="sectm">
-			<h1 class="tttm">Terms of Use<img class="imtm" src="../../assets/images/botoes/termo.svg"></h1>
+			<h1 class="tttm">Terms of Use<img class="imtm" src="../../assets/images/botoes/termo.svg" alt="Icon Terms"></h1>
 			<div class="dvtm">
 				<p class="txtm">
 					Welcome to APAV! By accessing and using our website, you agree to comply with the following terms and conditions:
@@ -48,7 +48,7 @@
 		</section>
 	</main>
 	<a href="https://api.whatsapp.com/send?phone=5511914874136&text=Olá,%20vim%20pelo%20site%20de%20vocês%20e%20gostaria%20de%20saber%20mais%20sobre%20o%20projeto!" target="_blank">
-		<img class="whats" src="../../assets/images/botoes/whats.svg">
+		<img class="whats" src="../../assets/images/botoes/whats.svg" alt="Logo WhatsApp">
 	</a>
 	<div class="loading">
 		<div class="loading_wd">
