--- a/pages/contato.html
+++ b/pages/contato.html
@@ -32,10 +32,10 @@
 				<p class="ct_ft_tx"><a href="tel:+5511914874136" class="ct_sd_tx">Telefone: +55 (11) 9 1487-4136</a></p>
 				<div class="ct_sd_dv">
 					<a href="https://www.instagram.com/associacaoalcancandovidas/" target="_blank">
-						<img class="ct_sd_dv_ft_im" src="../assets/images/botoes/instagram.svg">
+						<img class="ct_sd_dv_ft_im" src="../assets/images/botoes/instagram.svg" alt="Logo do Instagram">
 					</a>
 					<a href="https://api.whatsapp.com/send?phone=5511914874136&text=Olá,%20vim%20pelo%20site%20de%20vocês%20e%20gostaria%20de%20saber%20mais%20sobre%20o%20projeto!" target="_blank">
-						<img class="ct_sd_dv_ft_im" src="../assets/images/botoes/whatsapp.svg">
+						<img class="ct_sd_dv_ft_im" src="../assets/images/botoes/whatsapp.svg" alt="Logo do WhatsApp">
 					</a>
 				</div>
 			</div>
@@ -43,7 +43,7 @@
 		</section>
 	</main>
 	<a href="https://api.whatsapp.com/send?phone=5511914874136&text=Olá,%20vim%20pelo%20site%20de%20vocês%20e%20gostaria%20de%20saber%20mais%20sobre%20o%20projeto!" target="_blank">
-		<img class="whats" src="../assets/images/botoes/whats.svg">
+		<img class="whats" src="../assets/images/botoes/whats.svg" alt="Logo do WhatsApp">
 	</a>
 	<div class="loading">
 		<div class="loading_wd">
