--- a/pages/doar.html
+++ b/pages/doar.html
@@ -29,14 +29,14 @@
 			<h3 class="da_tt" data-aos="fade-up" data-aos-easing="ease-in-out">PIX</h3>
 			<div class="da_ft_dv">
 				<div class="da_sd_dv" data-aos="fade-down" data-aos-easing="ease-in-out">
-					<img class="da_ft_im" src="../assets/images/doar1.webp">
-					<img class="da_ft_im" src="../assets/images/doar2.webp">
-					<img class="da_ft_im" src="../assets/images/doar3.webp">
-					<img class="da_ft_im" src="../assets/images/doar4.webp">
+					<img class="da_ft_im" src="../assets/images/doar1.webp" alt="Criança indigena comendo macarrão">
+					<img class="da_ft_im" src="../assets/images/doar2.webp" alt="Mulheres sertanejas segurando necessaire de produtos básicos de higiene">
+					<img class="da_ft_im" src="../assets/images/doar3.webp" alt="Criança segurando um pacote de doces">
+					<img class="da_ft_im" src="../assets/images/doar4.webp" alt="Mulher sertaneja segurando um pacote de doces">
 				</div>
 				<div class="da_td_dv">
 					<div class="da_fo_dv">
-						<img class="da_sd_im" data-aos="fade-up" data-aos-easing="ease-in-out" src="../assets/images/qrcode.jpeg">
+						<img class="da_sd_im" data-aos="fade-up" data-aos-easing="ease-in-out" src="../assets/images/qrcode.jpeg" alt="QR Code do PIX">
 					</div>
 					<!--
               <div>
@@ -46,16 +46,16 @@
               -->
 				</div>
 				<div class="da_ff_dv" data-aos="fade-down" data-aos-easing="ease-in-out">
-					<img class="da_ft_im" src="../assets/images/doar5.webp">
-					<img class="da_ft_im" src="../assets/images/doar6.webp">
-					<img class="da_ft_im" src="../assets/images/doar7.webp">
-					<img class="da_ft_im" src="../assets/images/doar8.webp">
+					<img class="da_ft_im" src="../assets/images/doar5.webp" alt="Mulheres segurando pacote de produtos básicos de higiene">
+					<img class="da_ft_im" src="../assets/images/doar6.webp" alt="Um carro com vários pacotes de cesta básica">
+					<img class="da_ft_im" src="../assets/images/doar7.webp" alt="Voluntário levando cesta básica">
+					<img class="da_ft_im" src="../assets/images/doar8.webp" alt="Crianças e pais assistindo palestra">
 				</div>
 			</div>
 		</section>
 	</main>
 	<a href="https://api.whatsapp.com/send?phone=5511914874136&text=Olá,%20vim%20pelo%20site%20de%20vocês%20e%20gostaria%20de%20saber%20mais%20sobre%20o%20projeto!" target="_blank">
-		<img class="whats" src="../assets/images/botoes/whats.svg">
+		<img class="whats" src="../assets/images/botoes/whats.svg" alt="Logo do WhatsApp">
 	</a>
 	<div class="loading">
 		<div class="loading_wd">
