--- a/pages/sobre.html
+++ b/pages/sobre.html
@@ -27,7 +27,7 @@
 		<section>
 			<div class="sb_ft_dv">
 				<div class="sb_he_dv">
-					<img class="sb_he" src="../assets/images/bg3.webp">
+					<img class="sb_he" src="../assets/images/bg3.webp" alt="Voluntários posando para foto">
 				</div>
 				<h2 class="sb_he_tt" data-aos="flip-left" data-aos-delay="700" data-aos-easing="ease-in-out">Sobre Nós</h2>
 			</div>
@@ -82,23 +82,23 @@
 				</div>
 				<div class="sb_ff_dv">
 					<div class="sb_sx_dv">
-						<img class="sb_sx_im" data-aos="fade-up" data-aos-easing="ease-in-out" src="../assets/images/brazil.svg">
+						<img class="sb_sx_im" data-aos="fade-up" data-aos-easing="ease-in-out" src="../assets/images/brazil.svg" alt="Bandeira do Brasil">
 						<h3 class="sb_sx_tt" data-aos="fade-up" data-aos-easing="ease-in-out">Brasil</h3>
 					</div>
 					<div class="sb_sx_dv">
-						<img class="sb_sx_im" data-aos="fade-up" data-aos-easing="ease-in-out" src="../assets/images/bolivia.svg">
+						<img class="sb_sx_im" data-aos="fade-up" data-aos-easing="ease-in-out" src="../assets/images/bolivia.svg" alt="Bandeira da Bolívia">
 						<h3 class="sb_sx_tt" data-aos="fade-up" data-aos-easing="ease-in-out">Bolívia</h3>
 					</div>
 					<div class="sb_sx_dv">
-						<img class="sb_sx_im" data-aos="fade-up" data-aos-easing="ease-in-out" src="../assets/images/paraguai.svg">
+						<img class="sb_sx_im" data-aos="fade-up" data-aos-easing="ease-in-out" src="../assets/images/paraguai.svg" alt="Bandeira do Paraguai">
 						<h3 class="sb_sx_tt" data-aos="fade-up" data-aos-easing="ease-in-out">Paraguai</h3>
 					</div>
 					<div class="sb_sx_dv">
-						<img class="sb_sx_im" data-aos="fade-up" data-aos-easing="ease-in-out" src="../assets/images/chile.svg">
+						<img class="sb_sx_im" data-aos="fade-up" data-aos-easing="ease-in-out" src="../assets/images/chile.svg" alt="Bandeira do Chile">
 						<h3 class="sb_sx_tt" data-aos="fade-up" data-aos-easing="ease-in-out">Chile</h3>
 					</div>
 					<div class="sb_sv_dv">
-						<img class="sb_sx_im" data-aos="fade-up" data-aos-easing="ease-in-out" src="../assets/images/africa.svg">
+						<img class="sb_sx_im" data-aos="fade-up" data-aos-easing="ease-in-out" src="../assets/images/africa.svg" alt="Bandeira do Continente Africano">
 						<h3 class="sb_sx_tt" data-aos="fade-up" data-aos-easing="ease-in-out">Continente Africano</h3>
 					</div>
 				</div>
@@ -110,19 +110,19 @@
 					<p class="sb_fo_tx" data-aos="fade-up" data-aos-easing="ease-in-out">Com uma abordagem centrada no amor e no sacrifício de Jesus, que deu sua vida para salvar a humanidade, a Associação busca alcançar aqueles que, muitas vezes, são esquecidos pela sociedade. O objetivo não é apenas oferecer consolo espiritual, mas também restaurar a dignidade e promover a transformação por meio do apoio assistencial.</p>
 				</div>
 				<div class="sb_ei_dv">
-					<img class="sb_sx_im" data-aos="fade-up" data-aos-easing="ease-in-out" src="../assets/images/christ.svg">
-					<img class="sb_sx_im" data-aos="fade-up" data-aos-easing="ease-in-out" src="../assets/images/equal.svg">
-					<img class="sb_sx_im" data-aos="fade-up" data-aos-easing="ease-in-out" src="../assets/images/heartchrist.svg">
+					<img class="sb_sx_im" data-aos="fade-up" data-aos-easing="ease-in-out" src="../assets/images/christ.svg" alt="Cruz com o símbolo de Cristo">
+					<img class="sb_sx_im" data-aos="fade-up" data-aos-easing="ease-in-out" src="../assets/images/equal.svg" alt="Símbolo de Igualdade">
+					<img class="sb_sx_im" data-aos="fade-up" data-aos-easing="ease-in-out" src="../assets/images/heartchrist.svg" alt="Coração com o símbolo de Cristo">
 				</div>
 				<div class="sb_fo_dv">
 					<p class="sb_fo_tx" data-aos="fade-up" data-aos-easing="ease-in-out">Junte-se a nós nessa missão de transformação! Unidos, podemos impactar a vida de milhares de pessoas, levando esperança, renovação e o amor de Cristo àqueles que mais precisam. Faça parte dessa mudança!</p>
 				</div>
-				<a class="sb_bt" href="https://api.whatsapp.com/send?phone=5511914874136&text=Olá,%20vim%20pelo%20site%20de%20vocês%20e%20quero%20ser%20voluntário%20do%20projeto,%20como%20posso%20me%20candidatar?" target="_blank">QUERO SER UM VOLUNTÁRIO<br><img class="sb_bt_im" src="../assets/images/heart.svg"></a>
+				<a class="sb_bt" href="https://api.whatsapp.com/send?phone=5511914874136&text=Olá,%20vim%20pelo%20site%20de%20vocês%20e%20quero%20ser%20voluntário%20do%20projeto,%20como%20posso%20me%20candidatar?" target="_blank">QUERO SER UM VOLUNTÁRIO<br><img class="sb_bt_im" src="../assets/images/heart.svg" alt="Coração com as mãos"></a>
 			</div>
 		</section>
 	</main>
 	<a href="https://api.whatsapp.com/send?phone=5511914874136&text=Olá,%20vim%20pelo%20site%20de%20vocês%20e%20gostaria%20de%20saber%20mais%20sobre%20o%20projeto!" target="_blank">
-		<img class="whats" src="../assets/images/botoes/whats.svg">
+		<img class="whats" src="../assets/images/botoes/whats.svg" alt="Logo do WhatsApp">
 	</a>
 	<div class="loading">
 		<div class="loading_wd">
