--- a/pages/ES/es.html
+++ b/pages/ES/es.html
@@ -36,6 +36,19 @@
 		</section>
 		<section id="sc_2">
 			<div class="dv_2">
+				<h2 class="tt_2" data-aos="fade-up" data-aos-easing="ease-in-out">CALENDARIO DE EVENTOS</h2>
+				<span class="separator" data-aos="fade-up" data-aos-easing="ease-in-out"></span>
+				<div class="carousel-container">
+					<button class="nav-arrow left">‹</button>
+					<div class="carousel-track">
+						<div class="card" data-index="0"><img src="/assets/images/missoes/agap.jpeg" alt="Member 1"></div>
+						<div class="card" data-index="1"><img src="/assets/images/missoes/agap.jpeg" alt="Member 2"></div>
+						<div class="card" data-index="2"><img src="/assets/images/missoes/agap.jpeg" alt="Member 3"></div>
+						<div class="card" data-index="3"><img src="/assets/images/missoes/agap.jpeg" alt="Member 4"></div>
+						<div class="card" data-index="4"><img src="/assets/images/missoes/agap.jpeg" alt="Member 5"></div>
+					</div>
+					<button class="nav-arrow right">›</button>
+				</div>
 				<h2 class="tt_2" data-aos="fade-up" data-aos-easing="ease-in-out">INSPIRADOS EN LA FE CRISTIANA</h2>
 				<span class="separator" data-aos="fade-up" data-aos-easing="ease-in-out"></span>
 				<p class="tx_2" data-aos="fade-up" data-aos-easing="ease-in-out">
