--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 						<div class="card" data-index="0"><img src="/assets/images/missoes/Capacitacao.jpeg" alt="Member 1"></div>
 						<div class="card" data-index="1"><img src="/assets/images/missoes/Conferencia.jpeg" alt="Member 2"></div>
 						<div class="card" data-index="2"><img src="/assets/images/missoes/Conferencia1.jpeg" alt="Member 3"></div>
-						<div class="card" data-index="1"><img src="/assets/images/missoes/Natal.jpg" alt="Member 2"></div>
+						<div class="card" data-index="1"><img src="/assets/images/missoes/Natal.jpeg" alt="Member 2"></div>
 						<!-- <div class="card" data-index="4"><img src="/assets/images/missoes/agap.jpeg" alt="Member 5"></div> -->
 					</div>
 					<button class="nav-arrow right">›</button>
